name: sunWM
version: 0.0.1
synopsis: X11 tiling window-manager
category: System
license: GPL3
license-file: LICENSE
author: Zac Meadows
maintainer: zmeadows@gmail.com

cabal-Version: >= 1.2
build-Type: Simple

executable sunwm
  main-is: Sunwm.hs
  build-depends: base, X11, fclabels, mtl, containers, extensible-exceptions, unix, transformers
  ghc-options: -funbox-strict-fields -Wall -O2 -fspec-constr-count=32 -fforce-recomp
